[package]
name = "douconel"
version = "0.0.1"
edition = "2021"

[dependencies]
hutspot = { path = "../hutspot" }

# core
itertools = "0.13.0"
serde = {version = "1.0.196", features = ["serde_derive"] }
serde_json = "1.0.96"
rand = "0.8.5"
ordered-float = "4.2.0"
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
thiserror = "1.0.29"
approx = "0.5.1"
slotmap = { version = "1.0.7", features = ["serde"] }
bimap = "0.6.3" # for face and vertex maps
# integrations
stl_io = "0.7.0"
obj = "0.10.2"
petgraph = "0.6.4" # may not be needed? write own functions + use pathfinding
bevy = "0.14.2"
