[package]
name = "douconel"
version = "0.0.1"
edition = "2024"

[dependencies]
# hutspot = { path = "../hutspot" }
hutspot = { git = "https://github.com/maximsnoep/hutspot" }

# core
itertools = "0.14.0"
serde = {version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
rand = "0.9.1"
ordered-float = "5.0.0"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
thiserror = "2.0.12"
slotmap = { version = "1.0.7", features = ["serde"] } # for storing vertices, edges, and faces
bimap = "0.6.3" # for face and vertex ID maps
# integrations
stl_io = "0.8.5"
obj = "0.10.2"
bevy = "0.16.0"
petgraph = "0.8.1"
